# file-type

./: CFileChecker.cpp  CFileChecker.h  CFileType.cpp  CFileType.h  CMagicSet.cpp  CMagicSet.h  CMagicSetHelper.cpp  CMagicSetHelper.h  CMakeLists.txt  HandleWrapper.h  SMagicSet.cpp  SMagicSet.h  Singleton.h  base.h  encodings.cpp  encodings.h  help.txt  logger.cpp  logger.h  magic_set.cpp  magic_set.h  main.cpp  type_table.cpp  type_table.h
test/: CMakeLists.txt  test-config.h.in  test-encoding.cpp  test-gb2312.txt  test-utf-8-bom.txt
test/resources/: test-utf-16-be.txt  test-utf-16-le.txt  test-utf-8.txt
utils/: file_utils.h  string_utils.h
